Profile list now uses the new task based resources

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -832,6 +832,18 @@ tr.adminSeparator hr {
 	}
 }
 
+.admin-table {
+	.disabled {
+		.muted();
+	}
+	.centered {
+		text-align: center;
+	}
+	.progress-info {
+		min-width: 260px;
+	}
+}
+
 /* SERVER CONTROLS */
 label {
     padding-left: 3px;
