Field EmailMatch was missing in mobile view

--- a/src/Presentation/SmartStore.Web/Views/Shared/_CreateOrUpdateAddress.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/_CreateOrUpdateAddress.Mobile.cshtml
@@ -60,6 +60,16 @@
     @Html.EditorFor(model => model.Email)
     @Html.ValidationMessageFor(model => model.Email)
 </div>
+
+@if (Model.ValidateEmailAddress)
+{
+    <div>
+        @Html.LabelFor(model => model.EmailMatch, new { @class = "control-label required", @for = "EmailMatch" })
+        @Html.EditorFor(model => model.EmailMatch)
+        @Html.ValidationMessageFor(model => model.EmailMatch)
+    </div>
+}
+
 @if (Model.StreetAddressEnabled)
 {
     <div>
