--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -386,7 +386,8 @@ th label {
 	vertical-align: text-top;
 }
 
-.label-smnet {
+.label-smnet,
+.label-inline {
 	margin-right: 5px;
 }
 .label-smnet-hide {
