--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
@@ -21,60 +21,70 @@
 	<input type="hidden" name="ExportAll" value="true" />
 </form>
 
-<table id="export-profile-grid" class="table admin-table">
-	<thead>
-		<tr>
-			<th class="centered">@T("Common.Image")</th>
-			<th>@T("Admin.Configuration.Export.Name")</th>
-			<th class="centered">@T("Common.Enabled")</th>
-			<th>@T("Admin.Configuration.Export.EntityType")</th>
-			<th class="centered">@T("Admin.Configuration.Export.FileExtension")</th>
-			<th>@T("Admin.System.ScheduleTasks.LastStart")</th>
-			<th>@T("Admin.System.ScheduleTasks.NextRun")</th>
-			<th>@T("Admin.Common.Actions")</th>
-		</tr>
-	</thead>
-	<tbody>
-		@foreach (var profile in Model)
-		{
-			<tr data-task-id="@profile.ScheduleTaskId" class="@(profile.Enabled ? "" : "disabled")">
-				<td class="centered">
-					<img src="@profile.Provider.ThumbnailUrl" alt="@profile.Provider.FriendlyName" />
-				</td>
-				<td>
-					<a href="@Url.Action("Edit", new { id = profile.Id })">@profile.Provider.FriendlyName <span class="muted">(@profile.Provider.SystemName)</span></a>
-				</td>
-				<td class="centered">
-					@Html.SymbolForBool(profile.Enabled)
-				</td>
-				<td>
-					@profile.Provider.EntityTypeName
-				</td>
-				<td class="centered">
-					@profile.Provider.FileExtension
-				</td>
-				<td>
-					<div class="last-run-info"></div>
-				</td>
-				<td class="progress-info">
-					<div class="next-run-info"></div>
-					<div class="task-progress text-success@(profile.IsTaskRunning ? "" : " hide")" data-task-id="@profile.ScheduleTaskId" data-running="@(profile.IsTaskRunning ? "true" : "false")"></div>
-				</td>
-				<td>
-					<button type="button" class="btn btn-small btn-success btn-run-task@(profile.IsTaskRunning ? " hide" : "")"
-							data-id="@profile.Id" data-task-id="@profile.ScheduleTaskId">
-						<i class="fa fa-play"></i>&nbsp;@T("Admin.System.ScheduleTasks.RunNow")
-					</button>
-
-					<a href="@Url.Action("CancelJob", "ScheduleTask", new { id = profile.ScheduleTaskId })" class="btn btn-small btn-danger btn-cancel-task@(!profile.IsTaskRunning ? " hide" : "")"
-					   data-task-id="@profile.ScheduleTaskId" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
-						@T("Common.Cancel")
-					</a>
-				</td>
+@if(Model.Count > 0)
+{
+	<table id="export-profile-grid" class="table admin-table">
+		<thead>
+			<tr>
+				<th class="centered">@T("Common.Image")</th>
+				<th>@T("Admin.DataExchange.Export.Name")</th>
+				<th class="centered">@T("Common.Enabled")</th>
+				<th>@T("Admin.DataExchange.Export.EntityType")</th>
+				<th class="centered">@T("Admin.DataExchange.Export.FileExtension")</th>
+				<th>@T("Admin.System.ScheduleTasks.LastStart")</th>
+				<th>@T("Admin.System.ScheduleTasks.NextRun")</th>
+				<th>@T("Admin.Common.Actions")</th>
 			</tr>
-		}
-	</tbody>
-</table>
+		</thead>
+		<tbody>
+			@foreach (var profile in Model)
+			{
+				<tr data-task-id="@profile.ScheduleTaskId" class="@(profile.Enabled ? "" : "disabled")">
+					<td class="centered">
+						<img src="@profile.Provider.ThumbnailUrl" alt="@profile.Provider.FriendlyName" />
+					</td>
+					<td>
+						<a href="@Url.Action("Edit", new { id = profile.Id })">@profile.Provider.FriendlyName <span class="muted">(@profile.Provider.SystemName)</span></a>
+					</td>
+					<td class="centered">
+						@Html.SymbolForBool(profile.Enabled)
+					</td>
+					<td>
+						@profile.Provider.EntityTypeName
+					</td>
+					<td class="centered">
+						@profile.Provider.FileExtension
+					</td>
+					<td>
+						<div class="last-run-info"></div>
+					</td>
+					<td class="progress-info">
+						<div class="next-run-info"></div>
+						<div class="task-progress text-success@(profile.IsTaskRunning ? "" : " hide")" data-task-id="@profile.ScheduleTaskId" data-running="@(profile.IsTaskRunning ? "true" : "false")"></div>
+					</td>
+					<td>
+						<button type="button" class="btn btn-small btn-success btn-run-task@(profile.IsTaskRunning ? " hide" : "")"
+								data-id="@profile.Id" data-task-id="@profile.ScheduleTaskId">
+							<i class="fa fa-play"></i>&nbsp;@T("Admin.System.ScheduleTasks.RunNow")
+						</button>
+
+						<a href="@Url.Action("CancelJob", "ScheduleTask", new { id = profile.ScheduleTaskId })" class="btn btn-small btn-danger btn-cancel-task@(!profile.IsTaskRunning ? " hide" : "")"
+						   data-task-id="@profile.ScheduleTaskId" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
+							@T("Common.Cancel")
+						</a>
+					</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+}
+else
+{
+	<div class="alert alert-info">
+		<button type="button" class="close" data-dismiss="alert">×</button>
+		@T("Admin.DataExchange.Export.NoProfiles")
+	</div>
+}
 
 <div id="export-profile-dialog" class="modal modal-large hide fade" tabindex="-1" data-urldelete="@Url.Action("Delete")" data-profile="@T("Common.Profile")">
 	<div class="modal-header">
