--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
@@ -64,7 +64,7 @@
 					</td>
 					<td>
 						<button type="button" class="btn btn-small btn-success btn-run-task@(profile.IsTaskRunning ? " hide" : "")"
-								data-id="@profile.Id" data-task-id="@profile.ScheduleTaskId">
+								data-id="@profile.Id" data-task-id="@profile.ScheduleTaskId" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
 							<i class="fa fa-play"></i>&nbsp;@T("Admin.System.ScheduleTasks.RunNow")
 						</button>
 
